# localstack-python-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
localstack/ext/python/: setup.py
localstack/ext/python/localstack_client/: localstack_client.py
localstack_client/: config.py  localstack_client.py  patch.py  session.py
tests/: test_config.py
tests/client/: __init__.py  conftest.py  test_config.py  test_patches.py  test_python_client.py
