[metadata]
name = localstack-client
version = 1.29
url = https://github.com/localstack/localstack-python-client
author = LocalStack Team
author_email = info@localstack.cloud
description = A lightweight Python client for LocalStack.
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Testing

[options]
packages =
    localstack_client

install_requires =
    boto3
    six

[options.extras_require]
# Dependencies to run the tests
test =
    coverage
    pycodestyle
    nose
