[metadata]
name = localstack-client
version = 2.9
url = https://github.com/localstack/localstack-python-client
author = LocalStack Team
author_email = info@localstack.cloud
description = A lightweight Python client for LocalStack.
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Testing

[options]
packages =
    localstack_client

install_requires =
    boto3

[options.extras_require]
# Dependencies to run the tests
test =
    black
    coverage
    flake8
    isort
    localstack
    pytest
